deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server
spec:
  containers:
    - name: server
    image: ghcr.io/elliemehl/kube_app:server
    ports: 
      - containerPort:  8080
